# REAL-Hackathon-browser-agent-benchmark

./: ARCHITECTURE.md  README.md  architecture.puml  component-interactions.puml  error-recovery-flow.puml  execution-flow.puml  main-execution-flow.puml  pyproject.toml  system-overview.puml
scripts/: agent_bench.py  bench.py
src/agi_agents/: __init__.py  adaptive_agent.py  batch_executor.py  metrics_tracker.py  models.py  orchestrator.py  prompts.py
src/agi_agents/qwen/: __init__.py  prompts.py  qwen.py  tools.py  vision_model.py
src/arena/: browser.py  execution.py  logging_config.py  run.py  state.py  task.py
src/benchmarks/hackathon/: evaluator.py
tests/: test_adaptive_agent.py  test_backward_compatibility.py  test_batch_executor.py  test_metrics_tracker.py  test_orchestrator.py  test_performance_optimizations.py  test_task_execution_integration.py
