[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-harness"
version = "0.1.0"
description = "Minimal agent harness for browser automation benchmarks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "patchright>=1.47.1",
    "Pillow>=10.0.0",
    "rich>=13.0.0",
    "deepdiff>=8.6.0",
    "jmespath>=1.0.0",
    "pytz>=2024.0",
    "openai>=1.0.0",
    "numpy>=2.3.5",
    "opik>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
arena = ["*.js", "*.css"]
